[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodes/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/DOTMATRI.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 28
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Hud" type="Node2D"]
script = ExtResource( 1 )

[node name="userLabel" type="Label" parent="."]
margin_left = 23.2411
margin_top = 1000.27
margin_right = 312.241
margin_bottom = 1029.27
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "User error reports: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverLabel" type="Label" parent="."]
margin_left = 1307.72
margin_top = 987.384
margin_right = 1596.72
margin_bottom = 1016.38
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
text = "Server fault codes: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneyLabel" type="Label" parent="."]
margin_left = 254.44
margin_top = 26.2333
margin_right = 1008.44
margin_bottom = 67.2333
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
custom_constants/shadow_as_outline = 1
text = "IT Dept. Budget: $10000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
